crates/scene/tests/snapshots/intent_attribute_on_extends.snap
---
source: crates/scene/tests/diagnostics.rs
expression: rendered
---
scene/misplaced-node

  × intent= not allowed inside extends
   ╭─[intent_attribute_on_extends.kdl:2:20]
 1 │ scene "demo" {
 2 │     extends "base" intent="x"
   ·                    ───┬──
   ·                       ╰── intent= cannot live inside extends
 3 │ }
   ╰────
  help: R2 scope table: `on`, `keybind`, `plugin`, `use`, `extends`, `include` are scene-root only; `tab`/`pane` belong inside `layout`; `when=` attrs are legal on `tab`/`pane` only.
