crates/scene/tests/snapshots/op_pipe_missing_plugin.snap
---
source: crates/scene/tests/diagnostics.rs
expression: rendered
---
op/unresolved-ref

  × op `ark.core.pipe` references unknown plugin `ststus`
   ╭─[op_pipe_missing_plugin.kdl:4:14]
 3 │     on "AgentReady" {
 4 │         pipe plugin="ststus" { text "hi" }
   ·              ───────┬───────
   ·                     ╰── no such plugin declared in this scene
 5 │     }
   ╰────
  help: did you mean `status`? Available plugins: status.
