crates/scene/tests/snapshots/op_split_pane_missing_tab.snap
---
source: crates/scene/tests/diagnostics.rs
expression: rendered
---
op/unresolved-ref

  × op `ark.core.split_pane` references unknown tab `wokr`
   ╭─[op_split_pane_missing_tab.kdl:6:20]
 5 │     on "AgentReady" {
 6 │         split_pane into="wokr" side="right"
   ·                    ─────┬─────
   ·                         ╰── no such tab declared in this scene
 7 │     }
   ╰────
  help: did you mean `work`? Available tabs: work.
