crates/scene/tests/snapshots/scene_root_typo_layout.snap
---
source: crates/scene/tests/diagnostics.rs
expression: rendered
---
scene/unknown-node

  × unknown node `layuot` at scene root
   ╭─[scene_root_typo_layout.kdl:2:5]
 1 │ scene "demo" {
 2 │     layuot {
   ·     ───┬──
   ·        ╰── not a recognised scene-root node
 3 │     }
   ╰────
  help: did you mean `layout`? Scene-root admits: extends, include, use, layout, plugin, on, keybind, engine, clear-reactions, clear-keybind, disable-plugin.
