crates/scene/tests/snapshots/stray_top_level_node.snap
---
source: crates/scene/tests/diagnostics.rs
expression: rendered
---
scene/unknown-node

  × unknown node `sceen` at scene root
   ╭─[stray_top_level_node.kdl:1:1]
 1 │ sceen "demo" {
   · ──┬──
   ·   ╰── not a recognised scene-root node
 2 │ }
   ╰────
  help: did you mean `scene`? Scene-root admits: extends, include, use, layout, plugin, on, keybind, engine, clear-reactions, clear-keybind, disable-plugin.
