crates/scene/tests/snapshots/unknown_scene_root_node.snap
---
source: crates/scene/tests/diagnostics.rs
expression: rendered
---
scene/unknown-node

  × unknown node `reaction` at scene root
   ╭─[unknown_scene_root_node.kdl:2:5]
 1 │ scene "demo" {
 2 │     reaction "AgentReady" {
   ·     ────┬───
   ·         ╰── not a recognised scene-root node
 3 │     }
   ╰────
  help: did you mean `clear-reactions`? Scene-root admits: extends, include, use, layout, plugin, on, keybind, engine, clear-reactions, clear-keybind, disable-plugin.
