crates/scene/tests/snapshots/when_attribute_on_keybind.snap
---
source: crates/scene/tests/diagnostics.rs
expression: rendered
---
scene/misplaced-node

  × when= not allowed inside keybind
   ╭─[when_attribute_on_keybind.kdl:2:21]
 1 │ scene "demo" {
 2 │     keybind "Alt p" when="true" intent="picker.show"
   ·                     ──┬─
   ·                       ╰── when= cannot live inside keybind
 3 │ }
   ╰────
  help: R2 scope table: `on`, `keybind`, `plugin`, `use`, `extends`, `include` are scene-root only; `tab`/`pane` belong inside `layout`; `when=` attrs are legal on `tab`/`pane` only.
