crates/scene/tests/snapshots/when_attribute_on_plugin.snap
---
source: crates/scene/tests/diagnostics.rs
expression: rendered
---
scene/misplaced-node

  × when= not allowed inside plugin
   ╭─[when_attribute_on_plugin.kdl:2:21]
 1 │ scene "demo" {
 2 │     plugin "status" when="true" {
   ·                     ──┬─
   ·                       ╰── when= cannot live inside plugin
 3 │         source "shipped:status"
   ╰────
  help: R2 scope table: `on`, `keybind`, `plugin`, `use`, `extends`, `include` are scene-root only; `tab`/`pane` belong inside `layout`; `when=` attrs are legal on `tab`/`pane` only.
